--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@trendmicro/react-sidenav": "^0.4.5",
+    "axios": "^0.18.0",
+    "chart.js": "^1.1.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
