--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.18.0",
     "chart.js": "^1.1.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-chartjs": "^1.2.0",
