--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^1.10.1",
+    "@devexpress/dx-react-grid": "^1.10.1",
+    "@devexpress/dx-react-grid-material-ui": "^1.10.1",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.18.0",
     "chart.js": "^1.1.1",
+    "devextreme": "^18.2.6",
+    "devextreme-react": "^18.2.6",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
