--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.1",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.1",
+    "react-month-picker-input": "^1.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
